# yt-transcript-md

./: .gitignore  .golangci.yml  .goreleaser.yml  Makefile  README.md  go.mod  go.sum  pyproject.toml
.github/workflows/: ci.yml  release.yml
cmd/yt-transcript-md/: main.go
docs/: golang_migration_plan.md  tech_spec_v1.md  transcript_provider_decision.md
docs/001-default-save-rich-feedback/: plan.md  tasks.md
docs/002-clipboard-multi-link-selection/: data-model.md  plan.md  spec.md  tasks.md  test-plan.md
docs/003-clipboard-history-tui-selection/: data-model.md  plan.md  spec.md  tasks.md  test-plan.md
docs/004-positional-url-arguments/: spec.md
internal/app/: export.go  export_test.go  reporter.go  reporter_test.go  selection.go  selection_test.go
internal/cli/: export.go  history_tui.go  provider_prod.go  provider_test_mode.go  root.go  selection.go  selection_test.go  version.go
internal/clipboard/: clipboard.go
internal/history/: history.go  history_test.go
internal/input/: fuzz_test.go  parser.go  parser_test.go
internal/markdown/: render.go  render_test.go
internal/metadata/: provider.go  provider_test.go
internal/models/: models.go
internal/transcript/: provider.go  youtube_provider.go
internal/version/: version.go
scripts/: build.sh  clean.sh  lint.sh  mod-verify.sh  release.sh  test-docker.sh  test.sh  tidy-check.sh  tidy.sh  verify.sh  vet.sh
scripts/lib/: common.sh
specs/001-default-save-rich-feedback/: data-model.md  review.md  spec.md  test-plan.md
src/yt_transcript_md/: cli.py  (+6 more)
tests/: test_markdown.py  test_parser.py
(+9 files in other folders)
