[project]
name = "yt-transcript-md"
version = "0.1.0"
description = "Export available YouTube transcripts from comma-separated links into Markdown."
readme = "README.md"
requires-python = ">=3.11,<3.15"
license = { text = "MIT" }
authors = [
  { name = "Nawodya Ishan", email = "nawodyain@gmail.com" }
]
keywords = ["youtube", "transcripts", "markdown", "cli", "captions"]
dependencies = [
  "rich>=13.7.0",
  "typer>=0.12.0",
  "youtube-transcript-api>=1.2.4",
]

[project.scripts]
yt-transcript-md = "yt_transcript_md.cli:main"

[dependency-groups]
dev = [
  "mypy>=1.10.0",
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
  "SIM",
  "RUF",
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
disallow_untyped_defs = true
no_implicit_optional = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["youtube_transcript_api.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=yt_transcript_md --cov-report=term-missing"
